--- a/.gitignore
+++ b/.gitignore
@@ -19,5 +19,24 @@
 *.rar
 workspace.xml
 
+# Maven ignore
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+
+# Eclipse ignore
+*.project
+*.classpath
+.settings
+
+# IntelliJ
+*.iml
+.idea
+*.DS_Store
+.sass-cache
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
